--- a/index-2.html
+++ b/index-2.html
@@ -295,10 +295,10 @@
 							<div class="wt-bannercontent">
 								<div class="wt-bannerhead">
 									<div class="wt-title">
-										<h1><span>Hire expert freelancers</span> for any job, Online</h1>
+										<h1><span>Trabajadores tecnológicos</span> desde casa, Online</h1>
 									</div>
 									<div class="wt-description">
-										<p>Consectetur adipisicing elit sed dotem eiusmod tempor incuntes ut labore etdolore maigna aliqua enim.</p>
+										<p>Si tienes skills tecnológicas, apúntate a Freelanzao, conseguiras trabajo, desde casa. Te conectamos con cientos de empresas.</p>
 									</div>
 								</div>
 								<form class="wt-formtheme wt-formbanner">
@@ -333,7 +333,7 @@
 										<a data-rel="prettyPhoto[video]" href="https://www.youtube.com/watch?v=J37W6DjqT3Q"><i class="fa fa-play"></i></a>
 									</div>
 									<div class="wt-videocontent">
-										<span>See For Yourself!<em>How it works &amp; experience the ultimate joy.</em></span>
+										<span>Descubre que hace un Freelance!<em>desde casa &amp; trabajando a tope.</em></span>
 									</div>
 								</div>
 							</div>
