--- a/index-2.html
+++ b/index-2.html
@@ -351,8 +351,8 @@
 							<div class="col-xs-12 col-sm-12 col-md-8 push-md-2 col-lg-6 push-lg-3">
 								<div class="wt-sectionhead wt-textcenter">
 									<div class="wt-sectiontitle">
-										<h2>Explore Categories</h2>
-										<span>Professional by categories</span>
+										<h2>Elige tu especialidad</h2>
+										<span>Profesionales por categorías</span>
 									</div>
 								</div>
 							</div>
@@ -361,10 +361,10 @@
 									<div class="wt-categorycontent">
 										<figure><img src="images/categories/img-01.png" alt="image description"></figure>
 										<div class="wt-cattitle">
-											<h3><a href="javascrip:void(0);">Mobiles</a></h3>
+											<h3><a href="javascrip:void(0);">Ux/Ui</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Para profesionales orientados a mejorar la experiencia del usuario</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
@@ -376,7 +376,7 @@
 											<h3><a href="javascrip:void(0);">Digital Marketing</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Para profesionales orientados a realizar campañas de captación de tráfico y ventas.</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
@@ -388,7 +388,7 @@
 											<h3><a href="javascrip:void(0);">Writing &amp; Translation</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Profesionales generadores de contenidos y traductores profesionales.</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
@@ -400,7 +400,7 @@
 											<h3><a href="javascrip:void(0);">Video &amp; Animation</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Expertos en generación de contenidos audiovisuales y diseñadores de animaciones.</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
@@ -412,7 +412,7 @@
 											<h3><a href="javascrip:void(0);">Music &amp; Audio</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Compositores y creadores de audios, para vídeos, videojuegos, etc.</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
@@ -424,7 +424,7 @@
 											<h3><a href="javascrip:void(0);">Programming &amp; Tech</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Profesionales generadores de código, en distintos lenguajes y dispositivos.</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
@@ -436,7 +436,7 @@
 											<h3><a href="javascrip:void(0);">Business</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Expertos en conseguir negocio de las empresas y hacer crecer la cartera de clientes.</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
@@ -445,10 +445,10 @@
 									<div class="wt-categorycontent">
 										<figure><img src="images/categories/img-07.png" alt="image description"></figure>
 										<div class="wt-cattitle">
-											<h3><a href="javascrip:void(0);">Fun &amp; Lifestyle</a></h3>
+											<h3><a href="javascrip:void(0);">Fun &amp; Influencers</a></h3>
 										</div>
 										<div class="wt-categoryslidup">
-											<p>Consectetur adipisicing elitaed eiusmod tempor incididuatna labore et dolore magna.</p>
+											<p>Para influencers y especialistas en fomentar un producto o marca.</p>
 											<a href="javascript:void(0);">Explore <i class="fa fa-arrow-right"></i></a>
 										</div>
 									</div>
