--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 							<div class="wt-bannercontent">
 								<div class="wt-bannerhead">
 									<div class="wt-title">
-										<h1><span>Hire expert freelancers</span> for any job, Online</h1>
+										<h1><span>Para freelancers tecnológicos</span> Trabaja desde casa.</h1>
 									</div>
 									<div class="wt-description">
 										<p>Consectetur adipisicing elit sed dotem eiusmod tempor incuntes ut labore etdolore maigna aliqua enim.</p>
